Ajout h1 quotes et styles CSS pour la page d'accueil

--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <title>Home</title>
 </head>
 <body>
-    
+     <h1>Welcome to our  Quotes Page</h1>
+    <blockquote>
+    <p>Cours de BigData.</p>
+    <cite>Nom de l'auteur</cite>
+</blockquote>
 </body>
 </html>
