Background color added

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Home</title>
 </head>
 <body>
-     <h1>Welcome to our  Quotes Page</h1>
+    <h1 style="background: color(srgb rgb(41, 82, 129) green blue);">Welcome to our  Quotes Page</h1>
     <blockquote>
     <p>Cours de BigData.</p>
     <cite>Nom de l'auteur</cite>
