--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <h1 style="background: color(srgb rgb(41, 82, 129) green blue);">Welcome to our  Quotes Page</h1>
     <blockquote>
     <p>Cours de BigData.</p>
-    <cite>Justin Bieber</cite>
+    <cite>Justin Bridou</cite>
 </blockquote>
 </body>
 </html>
